--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>ru.netology</groupId>
-    <artifactId>cart</artifactId>
+    <artifactId>Posters-manager</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
